--- a/style.css
+++ b/style.css
@@ -13,6 +13,8 @@ body{
     background-color: var(--baseBG) ;
 }
 
+/* *********  Calendar  *********    */
+
 #calendar {
     display: flex;
     flex-direction: column;
@@ -34,9 +36,9 @@ body{
     display: grid;
     grid-template-columns: repeat(20, 1fr);
     grid-auto-flow: row;
-    gap: 4px;
+    gap: 2px;
     
-    margin: 4px 4px;
+    margin: 3px 3px;
     /* border: 1px solid var(--monthBorder); */
 }
 
@@ -51,3 +53,31 @@ body{
 .passed {
     background-color: var(--dayPassed);
 }
+
+/* *********  Quote  *********    */
+
+#quoteDabba{
+    display: flex;
+    flex-direction: column;
+    gap: 1px;
+    align-items: center;
+    justify-content: center;
+    
+    padding: 2px 4px;
+    margin: 30px auto 2px;
+    max-width: 70%;
+
+    /* border: 1px solid red; */
+}
+
+.quote{
+    font-size: 20px;
+    margin: 0;
+}
+.by{
+    font-size: 14px;
+    margin: 0;
+}
+
+/* *********  Popup  *********    */
+
