--- a/background/onboard/onboard.css
+++ b/background/onboard/onboard.css
@@ -1,3 +1,21 @@
+:root{
+    --baseBG: #2e3436;
+
+    --headlineText:#E9DCC9;
+    --inputBG: #24292b;
+    --inputText: #cad0d3;
+    --placeholder: #8a979d;
+    --btnBG: #1DA1F2;
+}
+
+body{
+    background-color: var(--baseBG);
+}
+
+h1{
+    color: var(--headlineText);
+}
+
 main{
     display: flex;
     flex-direction: column;
@@ -8,6 +26,27 @@ main{
     margin: auto;
 }
 
+input{
+    background-color: var(--inputBG);
+    border: none;
+    font-size: 20px;
+    color: var(--inputText);
+    padding: 10px;
+}
+
+input::placeholder{
+    color: var(--placeholder)
+}
+
 button{
     margin: 10px;
+    padding: 5px 20px;
+    border-radius: 5px;
+    background-color: var(--btnBG);
+    cursor: pointer;
+}
+
+button:hover,
+button:focus {
+  padding: 8px 23px;
 }
