--- a/new_tab/new_tab.css
+++ b/new_tab/new_tab.css
@@ -41,7 +41,7 @@ body{
     font-size: 30px;
     font-weight: 400;
 
-    padding: 1px 1px 3px;
+    padding: 3px 1px;
     margin: 1px;
     user-select: none;
 }
