--- a/popup/popup.css
+++ b/popup/popup.css
@@ -1,12 +1,17 @@
 @import url('https://fonts.googleapis.com/css2?family=Averia+Serif+Libre&display=swap');
 
 :root {
-    --navBG: #353839;
-    --navText: #f9ab58;
-    --mainBG: #6c7072;
-    --mainText: #fbfcf8;
-    --popupOptionBG: #616466;
-    --titlePlaceholder: #adaeaf;
+    --navBG: #3B4252;
+    --navText: #EBCB8B;
+    --mainBG: #4C566A;
+    --mainText: #E5E9F0;
+    --titlePlaceholder: #5E81AC;
+    --inputBackground:  #8FBCBB;
+    --inputText: #2E3440;
+
+    --toggle-background: #3B4252;
+    --toggle-background-checked: #A3BE8C;
+    --toggle-button: #5E81AC;
 }
 
 body {
@@ -59,10 +64,6 @@ main {
     width: max-content;
 }
 
-.quote {
-    padding: 8px;
-}
-
 .title {
     display: flex;
     flex-direction: column;
@@ -76,6 +77,8 @@ main {
     padding: 5px;
     border: none;
     border-radius: 4px;
+    background-color: var(--inputBackground);
+    color: var(--inputText);
 }
 
 .title input::placeholder {
@@ -87,9 +90,9 @@ main {
     appearance: none;
     position: relative;
     display: inline-block;
-    background: lightgrey;
-    height: 1.65rem;
-    width: 2.75rem;
+    background: var(--toggle-background);
+    height: 1.55rem;
+    width: 2.65rem;
     vertical-align: middle;
     border-radius: 2rem;
     box-shadow: 0px 1px 3px #0003 inset;
@@ -98,9 +101,9 @@ main {
 .input-checkbox::before {
     content: '';
     display: block;
-    width: 1.25rem;
-    height: 1.25rem;
-    background: #fff;
+    width: 1.15rem;
+    height: 1.15rem;
+    background: var(--toggle-button);
     border-radius: 1.2rem;
     position: absolute;
     top: 0.2rem;
@@ -110,17 +113,17 @@ main {
     transform: translateX(0rem);
 }
 :checked {
-  background: green;
+    background: var(--toggle-background-checked);
 }
 :checked::before {
-  transform: translateX(1rem);
+    transform: translateX(1rem);
 }
 .input-checkbox:focus {
     outline-color: transparent;
-  }
+}
 /* for keyboard focus display */
 .input-checkbox:focus-visible {
-  outline: 2px solid dodgerblue;
-  outline-offset: 2px;
+    outline: 2px solid dodgerblue;
+    outline-offset: 2px;
 }
 /* ======================================== */
